# pp-kekw

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: test.yaml
frontend/: .eslintrc.js  app.vue  error.vue  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
frontend/assets/sass/: vuetify.sass
frontend/components/dashboard/account/: general.vue  schematicUpload.vue  schematics.vue  security.vue
frontend/components/dialog/: login.vue  totp.vue
frontend/components/form/: dialog.vue  fileInput.vue  passwordInput.vue
frontend/components/index/: NewsCarousel.vue  about.vue
frontend/components/layout/: accountAvatar.vue  appBar.vue  footer.vue  navigationDrawer.vue
frontend/composables/: dialogs.ts  fetch.ts  form.ts  responsive.ts  types.ts
frontend/layouts/: default.vue  index.vue
frontend/locales/: de.json  en.json
frontend/middleware/: auth.global.ts
frontend/pages/: index.vue  login.vue
frontend/pages/account/: index.vue
frontend/pages/news/: index.vue
frontend/plugins/: state.ts  vuetify.ts
frontend/stores/: auth.ts  dialog.ts  emitter.ts
src/: error.rs  main.rs  state.rs  tests.rs
src/auth/: mod.rs  session.rs
src/auth/authz/: mod.rs  permission.rs
src/data/: mod.rs  news.rs  schematic.rs
src/data/account/: create.rs  mod.rs  protected.rs
src/data/event/: mod.rs  team.rs
src/database/: id.rs  mod.rs  page.rs
src/database/surreal/: up.surrealql
src/routes/: docs.rs  extractor.rs  middleware.rs  mod.rs  news.rs
src/routes/account/: mod.rs  schematic.rs
src/routes/auth/: mod.rs  password.rs  totp.rs
src/routes/event/: mod.rs
